2002-05-08  Alex Larsson <alexl@redhat.com>

	* libnautilus-private/nautilus-global-preferences.c:
	* libnautilus-private/nautilus-global-preferences.h:
	* src/nautilus-preferences-dialog.c:
	Remove all references to the http proxy settings.
	These are now handled by gnome-vfs and the control-center.

=== nautilus 1.1.15 ===
 
2002-05-06  Alex Larsson  <alexl@redhat.com>

	* NEWS:
	* configure.in:
	Bump version to 1.1.15.

2002-05-05  David Emory Watson  <dwatson@cs.ucr.edu>

	* src/nautilus-location-bar.c:
	(editable_event_after_callback): Don't expand ~ or ~/ until the user
	presses enter, bug 47239.
	(has_exactly_one_slash): Removed.

2002-05-05  David Emory Watson  <dwatson@cs.ucr.edu>

	* libnautilus-private/nautilus-global-preferences.c: Make list view
	default to 75% zoom to get "nice" looking font size while maintaining
	range of different font sizes.

	* src/file-manager/fm-list-view.c:
	(button_press_callback): Don't let the list view unselect anything when
	the user attempts to get the right-click menu on a selection.
	(fm_list_view_set_zoom_level): Invent equivalent of XXX_LARGE and make
	the font size at all zoom levels one bigger.

2002-05-04  David Emory Watson  <dwatson@cs.ucr.edu>

	* configure.in: Require eel 1.1.13.

	* src/nautilus-location-bar.c:
	(try_to_expand_path): Handle filenames with embeded or trailing white-
	space.  Fixes bug 46582.  Also fixes a minor utf8 bug that crept into
	the build.

2002-05-05  Christophe Merlet  <christophe@merlet.net>

       * src/file-manager/nautilus-desktop-icon-view-ui.xml:
       Fixed a typo.

2002-05-03  David Emory Watson  <dwatson@cs.ucr.edu>

	* src/nautilus-location-bar.c:
	(try_to_expand_path): Remove extranious check (we always expand "~/"
	before we get here) and call set_position_and_selection_to_end () since
	the behavior of gtk_entry_set_text () has changed.
	(editable_event_after_callback): Useless optimization.
	(nautilus_location_bar_set_location): Call set_position_and_selectio...
