@@ -78,7 +78,8 @@
 		<placeholder name="New Items Placeholder">
 			<menuitem name="New Folder"
 				  _label="_New Folder"
-			  	  accel="*Control*n"
+			  	  accel="*Shift**Control*n"
+				  pixtype="stock" pixname="gtk-new"
 				  verb="New Folder"/>
 		</placeholder>
 		<placeholder name="Open Placeholder">
@@ -193,6 +194,7 @@
 		<placeholder name="Before Zoom Items">
 			<placeholder name="New Items">
 				<menuitem name="New Folder" 
+				  pixtype="stock" pixname="gtk-new"
 				 verb="New Folder"/>
 			</placeholder>
                         <submenu name="Scripts"
