@@ -53,8 +53,8 @@
 
 		<placeholder name="New Items Placeholder" delimit="none">
 			<menuitem name="New Window"
+			  	  accel="*Control*n"
 				  _label="New _Window"
-				  pixtype="stock" pixname="gtk-new"
 				  verb="New Window"/>
 		</placeholder>
 		<placeholder name="Open Placeholder" delimit="top"/>
@@ -340,7 +340,6 @@
 		<placeholder name="Before Zoom Items" delimit="none">
 			<placeholder name="New Items" delimit="none">
 				<menuitem name="New Window" 
-				 pixtype="stock" pixname="gtk-new"
 				 verb="New Window"/>
 			</placeholder>
 		</placeholder>
