@@ -1,3 +1,10 @@
+2002-05-08  Alex Larsson  <alexl@redhat.com>
+
+	* src/file-manager/nautilus-directory-view-ui.xml: 
+	* src/nautilus-shell-ui.xml:
+	Use gtk-new icon for new document.
+	Ctrl-n is new window and Shift-Ctrl-n is new folder.
+
 2002-05-08  Alex Larsson <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-global-preferences.c:
